--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cube
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
 spring.datasource.username=root
 spring.datasource.password=123123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-# MyBatis配置
-mybatis.mapper-locations=classpath:mapper/*.xml
+# MyBatis
+mybatis.mapper-locations=classpath:com/example/demo/mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.model
 
 spring.redis.host=127.0.0.1
